# project-omikron

./: .gitattributes  .gitignore  art.md  default_bus_layout.tres  project.godot  readme.md
devlogs/: astro.config.mjs  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tsconfig.json
devlogs/src/: utils.ts
devlogs/src/components/: Card.astro  blog-preview.astro  footer.astro  navbar.astro
devlogs/src/layouts/: Layout.astro  blog-post.astro  layout.astro
devlogs/src/pages/: art.astro  index.astro
devlogs/src/pages/blog/: hello-world.md  hello-world.mdx  how-its-made.md  how-its-made.mdx  i-am-bad-at-programming.mdx  notebook.md  notebook.mdx
game/: project-omikron.c  readme.md
game/youtube-shader/: CMakeLists.txt  main.c  shader.h
src/: main.gd  nod979D.tmp  node_2d.tscn
src/assets/: ai-prompt.svg.import  basic-intro.wav.import  chazzox.jpeg.import  intro-background.png.import  ruairi.webp.import  shaq.jpg.import  wultur.jpeg.import
src/credits_scene/: credits_menu.gd  credits_menu.tscn
src/game_level/: game_level.gd  game_level.tscn
src/global_audio/: global_audio.tscn
src/main_menu_scene/: main_menu.gd  main_menu.tscn
src/pause_menu/: blur.gdshader  pause_menu.gd  pause_menu.tscn
src/utils/: utils.gd
